# pymyanlp

./: README.md  pyproject.toml
pymyanlp/: __init__.py
pymyanlp/analysis/: grammer.py  keywords.py  script.py  sentiment.py  spellcheck.py
pymyanlp/lib/mypos/: __init__.py
pymyanlp/lib/mypos/RDRPOSTagger/: api.py
pymyanlp/lib/mypos/RDRPOSTagger/SCRDRlearner/: Object.py  SCRDRTree.py  SCRDRTreeLearner.py
pymyanlp/lib/mypos/RDRPOSTagger/Utility/: Eval.py  LexiconCreator.py  Utils.py
pymyanlp/lib/mypos/RDRPOSTagger/pSCRDRtagger/: ExtRDRPOSTagger.py  RDRPOSTagger.py  RDRPOSTagger4En.py  RDRPOSTagger4Vn.py
pymyanlp/lib/mypos/models/: v3_train1.nopipe.DICT  v3_train1.nopipe.RDR
pymyanlp/lib/myword/: __init__.py
pymyanlp/preprocessor/: pos.py  segment.py  stopword.py  style.py  tokenizer.py  tools.py
pymyanlp/resources/: keywords.py  stopword.py
pymyanlp/text/: pos.py  script.py  segment.py  tokenizer.py
tests/: __init__.py  conftest.py  pytest.ini  test_analysis_sentiment.py  test_text_pos.py  test_text_script.py  test_text_segment.py
